[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.32.1"
anchor-spl = { version = "=0.32.1", features = ["token"] }
mpl-token-metadata = "=5.1.1"
base64ct = "=1.7.1"
borsh = "=0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1

[patch.crates-io]
ephemeral-rollups-sdk = { path = "/home/bunny/dev/cypherpunk-trading-comp/trading_competition/ephemeral-rollups-sdk-source/rust/sdk" }