[package]
name = "trading_competition"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_competition"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.1", features = ["token"] }
mpl-token-metadata = "=5.1.1"
ephemeral-rollups-sdk = { path = "/home/bunny/dev/cypherpunk-trading-comp/trading_competition/ephemeral-rollups-sdk-source/rust/sdk", features = ["anchor"] }
base64ct = "=1.7.1"
borsh = "=0.10.3"
borsh-derive = "0.10.3"  # Explicit for derives
hex = "0.4.3"